methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: ')' expected but ';' found.
move(5;versLAvant) 
      ^MethodsArgs:3: error: ';' expected but ')' found.
move(5;versLAvant) 
                 ^